# rlpc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  main.cpp  rlpc.desktop  rlpcmain.cpp  rlpcmain.hpp  rlpcmain.ui  search.cpp  search.hpp  search.ui  update.sh  yandex_api.c  yandex_api.cpp  yandex_api.h  yandex_api.hpp  yandexmusic.h
libyandexmusic/: PKGBUILD
res/: black.qss  white.qss
rlpc/: PKGBUILD
